Fluid text only above bigdesk size. Remove many manual font-size changes and manage text measure differently. Solves 'too large' profile images.

--- a/src/fortis-styles/scoped/_scoped.editable.scss
+++ b/src/fortis-styles/scoped/_scoped.editable.scss
@@ -64,9 +64,6 @@ $scoped_container: 's-editable' !default;
 
   blockquote {
     font-size: #{hu-get($hu-font-size-types, 500)};
-    @media (min-width: #{hu-get($hu-media-queries, bigdesk)}) {
-      font-size: hu-get($hu-font-size-types, 600);
-    }
   }
 
   pre {
